deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: nginx-volume
          persistentVolumeClaim:
            claimName: nginx
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/tmp"
              name: nginx-volume
          resources:
            requests:
              memory: "40Mi"
              cpu: "100m"
            limits:
              memory: "80Mi"
              cpu: "150m"
