service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort #ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30007
